ajout commande play + ajout JDAVE